# MiniPhysicalEngine

./: README.md
scenes/: newtons_cradle.scene  pool.scene  rotation_test.scene  spring_rotation.scene
src/: CMakeLists.txt
src/application/: application.cpp
src/physics/: CMakeLists.txt  body.hpp  collisions.cpp  collisions.hpp  main.cpp  physics.cpp  physics.hpp  spherebody.cpp  spherebody.hpp  spring.cpp  spring.hpp  trianglebody.hpp
